[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Enemi.gd" type="Script" id=1]
[ext_resource path="res://scenes/Blaster.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/characters/enemi_fork/walk_right1.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/enemi_fork/walk_right2.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/enemi_fork/walk_right3.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/enemi_fork/walk_right4.png" type="Texture" id=6]
[ext_resource path="res://assets/characters/enemi_fork/walk_right5.png" type="Texture" id=7]
[ext_resource path="res://assets/characters/enemi_fork/walk_right6.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 3.0

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="enemi" type="KinematicBody2D" groups=[
"Movables",
"Enemis",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
hit = 10
SPEED = 50
life = 100
blaster_shoot_scene = ExtResource( 2 )
range_attack = 100

[node name="Collision" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0.811882, 15.389 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 2 )
animation = "down"
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="View" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_lock_": true
}

[node name="zona" type="CollisionShape2D" parent="View" index="0"]

scale = Vector2( 25, 25 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ShootLoopTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Trigger" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="zona" type="CollisionShape2D" parent="Trigger" index="0"]

position = Vector2( 0.81, 15.38 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="View" to="." method="_on_view_area_entered"]

[connection signal="area_exited" from="View" to="." method="_on_view_area_exited"]

[connection signal="timeout" from="ShootLoopTimer" to="." method="_on_ShootLoopTimer_timeout"]


